@@ -114,6 +114,15 @@ static void Task_RunQueueEntry(void *pEntry, int iUnused)
                 point->scr[i] = NULL;
             }
 
+#if defined(STUB_SLAVE)
+            if (NULL != mudstate.ResultsSet)
+            {
+                RegRelease(mudstate.ResultsSet);
+                mudstate.ResultsSet = NULL;
+            }
+            mudstate.ResultsSet = point->ResultsSet;
+#endif // STUB_SLAVE
+
             UTF8 *command = point->comm;
 
             mux_assert(!mudstate.inpipe);
@@ -237,6 +246,14 @@ static void Task_RunQueueEntry(void *pEntry, int iUnused)
         }
     }
 
+#if defined(STUB_SLAVE)
+    if (NULL != mudstate.ResultsSet)
+    {
+        RegRelease(mudstate.ResultsSet);
+        mudstate.ResultsSet = NULL;
+    }
+#endif // STUB_SLAVE
+
     MEMFREE(point->text);
     point->text = NULL;
     free_qentry(point);
@@ -263,8 +280,8 @@ static void Task_SemaphoreTimeout(void *pExpired, int iUnused)
     // A semaphore has timed out.
     //
     BQUE *point = (BQUE *)pExpired;
-    add_to(point->sem, -1, point->attr);
-    point->sem = NOTHING;
+    add_to(point->u.s.sem, -1, point->u.s.attr);
+    point->u.s.sem = NOTHING;
     Task_RunQueueEntry(point, 0);
 }
 
@@ -316,7 +333,7 @@ static int CallBack_HaltQueue(PTASK_RECORD p)
             Halt_Entries_Run++;
             if (p->fpTask == Task_SemaphoreTimeout)
             {
-                add_to(point->sem, -1, point->attr);
+                add_to(point->u.s.sem, -1, point->u.s.attr);
             }
 
             for (int i = 0; i < MAX_GLOBAL_REGS; i++)
@@ -458,8 +475,8 @@ static int CallBack_NotifySemaphoreDrainOrAll(PTASK_RECORD p)
         // This represents a semaphore.
         //
         BQUE *point = (BQUE *)(p->arg_voidptr);
-        if (  point->sem == Notify_Sem
-           && (  point->attr == Notify_Attr
+        if (  point->u.s.sem == Notify_Sem
+           && (  point->u.s.attr == Notify_Attr
               || !Notify_Attr))
         {
             Notify_Num_Done++;
@@ -524,8 +541,8 @@ static int CallBack_NotifySemaphoreFirst(PTASK_RECORD p)
         // This represents a semaphore.
         //
         BQUE *point = (BQUE *)(p->arg_voidptr);
-        if (  point->sem == Notify_Sem
-           && (  point->attr == Notify_Attr
+        if (  point->u.s.sem == Notify_Sem
+           && (  point->u.s.attr == Notify_Attr
               || !Notify_Attr))
         {
             Notify_Num_Done++;
@@ -823,12 +840,20 @@ static BQUE *setup_que
         }
     }
 
+#if defined(STUB_SLAVE)
+    tmp->ResultsSet = mudstate.ResultsSet;
+    if (NULL != mudstate.ResultsSet)
+    {
+        RegAddRef(mudstate.ResultsSet);
+    }
+#endif // STUB_SLAVE
+
     // Load the rest of the queue block.
     //
     tmp->executor = executor;
     tmp->IsTimed = false;
-    tmp->sem = NOTHING;
-    tmp->attr = 0;
+    tmp->u.s.sem = NOTHING;
+    tmp->u.s.attr = 0;
     tmp->enactor = enactor;
     tmp->caller = caller;
     tmp->eval = eval;
@@ -882,8 +907,8 @@ void wait_que
 
     tmp->IsTimed = bTimed;
     tmp->waittime = ltaWhen;
-    tmp->sem = sem;
-    tmp->attr = attr;
+    tmp->u.s.sem = sem;
+    tmp->u.s.attr = attr;
 
     if (sem == NOTHING)
     {
@@ -913,6 +938,53 @@ void wait_que
     }
 }
 
+#if defined(STUB_SLAVE)
+      bool   QueryComplete_bDone   = false;
+      UINT32 QueryComplete_hQuery  = 0;
+const UTF8  *QueryComplete_pResult = NULL;
+
+static int CallBack_QueryComplete(PTASK_RECORD p)
+{
+    if (QueryComplete_bDone)
+    {
+        return IU_DONE;
+    }
+
+    if (Task_SQLTimeout == p->fpTask)
+    {
+        // This represents a query.
+        //
+        BQUE *point = (BQUE *)(p->arg_voidptr);
+        if (point->u.hQuery == QueryComplete_hQuery)
+        {
+            p->iPriority = PRIORITY_OBJECT;
+            p->ltaWhen.GetUTC();
+            p->fpTask    = Task_RunQueueEntry;
+
+            point->u.s.sem   = NOTHING;
+            point->u.s.attr  = 0;
+            RegAssign(&point->ResultsSet, strlen((char *)QueryComplete_pResult), QueryComplete_pResult);
+
+            QueryComplete_bDone = true;
+            return IU_UPDATE_TASK;
+        }
+    }
+    return IU_NEXT_TASK;
+}
+
+// This can be called as a side-effect of talking with the stubslave.
+// Therefore, we only want to raise the priority of the corresponding take
+// from SUSPENDED to OBJECT.
+//
+void query_complete(UINT32 hQuery, const UTF8 *pResult)
+{
+    QueryComplete_bDone   = false;
+    QueryComplete_hQuery  = hQuery;
+    QueryComplete_pResult = pResult;
+    scheduler.TraverseUnordered(CallBack_QueryComplete);
+}
+#endif // STUB_SLAVE
+
 // ---------------------------------------------------------------------------
 // sql_que: Add commands to the sql queue.
 //
@@ -939,11 +1011,16 @@ void sql_que
         return;
     }
 
-    // The query is passed in for display in @ps.  The real command is
-    // understood to be @trigger <thing>/<attr>.
-    //
+    ATTR *pattr = atr_num(attr);
+    if (NULL == pattr)
+    {
+        return;
+    }
+
+    UTF8 mbuf[MBUF_SIZE];
+    mux_sprintf(mbuf, MBUF_SIZE, "@trigger #%d/%s", thing, pattr->name);
     BQUE *tmp = setup_que(executor, caller, enactor, eval,
-        query,
+        mbuf,
         nargs, args,
         sargs);
 
@@ -952,14 +1029,12 @@ void sql_que
         return;
     }
 
-    tmp->IsTimed = false;
-    tmp->waittime = CLinearTimeAbsolute();
-    tmp->sem = thing;
-    tmp->attr = attr;
+    UINT32 hQuery = next_handle++;
 
-    next_handle++;
-    scheduler.DeferTask(tmp->waittime, PRIORITY_SUSPEND, Task_SQLTimeout, tmp, next_handle);
-    MUX_RESULT mr = mudstate.pIQueryControl->Query(next_handle, dbname, query);
+    tmp->u.hQuery = hQuery;
+
+    scheduler.DeferTask(tmp->waittime, PRIORITY_SUSPEND, Task_SQLTimeout, tmp, 0);
+    MUX_RESULT mr = mudstate.pIQueryControl->Query(hQuery, dbname, query);
     if (MUX_FAILED(mr))
     {
         scheduler.CancelTask(Task_SQLTimeout, tmp, next_handle);
@@ -1219,19 +1294,19 @@ static int CallBack_ShowDispatches(PTASK_RECORD p)
 static void ShowPsLine(BQUE *tmp)
 {
     UTF8 *bufp = unparse_object(Show_Player, tmp->executor, false);
-    if (tmp->IsTimed && (Good_obj(tmp->sem)))
+    if (tmp->IsTimed && Good_obj(tmp->u.s.sem))
     {
         CLinearTimeDelta ltd = tmp->waittime - Show_lsaNow;
-        notify(Show_Player, tprintf("[#%d/%d]%s:%s", tmp->sem, ltd.ReturnSeconds(), bufp, tmp->comm));
+        notify(Show_Player, tprintf("[#%d/%d]%s:%s", tmp->u.s.sem, ltd.ReturnSeconds(), bufp, tmp->comm));
     }
     else if (tmp->IsTimed)
     {
         CLinearTimeDelta ltd = tmp->waittime - Show_lsaNow;
         notify(Show_Player, tprintf("[%d]%s:%s", ltd.ReturnSeconds(), bufp, tmp->comm));
     }
-    else if (Good_obj(tmp->sem))
+    else if (Good_obj(tmp->u.s.sem))
     {
-        notify(Show_Player, tprintf("[#%d]%s:%s", tmp->sem, bufp, tmp->comm));
+        notify(Show_Player, tprintf("[#%d]%s:%s", tmp->u.s.sem, bufp, tmp->comm));
     }
     else
     {
@@ -1413,6 +1488,8 @@ void do_ps(dbref executor, dbref caller, dbref enactor, int eval, int key, UTF8 
     Shown_RunQueueEntry = 0;
     Total_SemaphoreTimeout = 0;
     Shown_SemaphoreTimeout = 0;
+    Total_SQLTimeout = 0;
+    Shown_SQLTimeout = 0;
     Show_Player_Target = executor_targ;
     Show_Object_Target = obj_targ;
     Show_Key = key;
